--- a/001MostFrequentWeekdays/index.html
+++ b/001MostFrequentWeekdays/index.html
@@ -5,7 +5,7 @@
     	<meta name="description" content="Your description goes here">
     	<meta name="keywords" content="one, two, three">
 
-		<title>Blank Template</title>
+		<title>Most frequent week calculator</title>
 		<!-- viewport-->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- external fonts -->
@@ -18,6 +18,15 @@
 	</head>
 	<body>
 
-		<script type="text/javascript" src="js/main.js"></script>
+		<h1>Do you want to know what is the most common weekday in some year?</h1>
+
+		<form>
+			<label>Which year do you want to know?</label>
+			<input type="text" id="year" name="year" placeholder="2022" value="2022">
+			<p>Check! </p>
+		</form>
+
+		<h2 id="weeks"></h2>
+		<script type="text/javascript" src="assets/js/main.js"></script>
 	</body>
 </html>
